Fix height of modal on mobile and update broken characters

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -187,7 +187,7 @@ a {
 	}
 
 	&.is-open {
-		max-height: 600px;
+		max-height: 1000px;
 	}
 
 	.modal__content {
